OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage_Dependency__c/Onboarding_Application_Stage_Dependency__c.object-meta.xml
<CustomObject>
    <description
  >Defines dependency rules between onboarding application stages using a Campaign/Campaign Member pattern for flexible dependency management. Specifies that a Target_Stage__c requires certain Required_Stage__c stages (defined via Onboarding_App_Stage_Dependency_Member__c) to be completed before it can be started. Example: A dependency named &quot;Requirement Setup Requires Vendor Selection&quot; might have Target_Stage__c=&quot;Select Requirement Set&quot; (Stage 3) and Logic_Type__c=&quot;ALL&quot;, with members requiring completion of &quot;Select Vendor&quot; (Stage 1) and &quot;Select Vendor Program&quot; (Stage 2). The flow engine prevents users from accessing Stage 3 until both Stage 1 and 2 are completed. This pattern persists even when stage orders change, unlike simple sequence-based dependencies.</description>
    <label>Onboarding Application Stage Dependency</label>
    <nameField>
        <label>Onboarding Application Stage Dependency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Application Stage Dependency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>