OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage_Dependency__c/fields/Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>Logic_Type__c</fullName>
    <description>Whether dependency requires ALL or ANY of the member stages.</description>
    <label>Logic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>