OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage_Dependency__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this dependency is mandatory.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>