OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage_Dependency__c/fields/Required_Stage__c.field-meta.xml
<CustomField>
    <fullName>Required_Stage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Stage that must be completed (or one of) for the dependency to pass.</description>
    <label>Required Stage</label>
    <referenceTo>Onboarding_Application_Stage__c</referenceTo>
    <relationshipLabel>Onboarding Application Stage Dependency (Required Stage)</relationshipLabel>
    <relationshipName>Onboarding_Application_Stage_Dependency1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>